--- a/index.html
+++ b/index.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Page Title</title>
-        <meta charset="utf-8" />
- </head>
- <body>
-    This is Text <br />
-    <h1>This is a Heading</h1>
-    <h1 color="red">This is a Heading</h1>
-    <p>This is a paragraph.</p>
- </body>
+<html lang="en">
+<head>
+    <!--besic website 4 to 10-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="about personal information">
+    <meta name="auther" content="Wilairak Prathummat">
+    <meta name="keywords" content="basic html example personal information"> 
+    <title>Personal Information</title> <!--web name-->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.5/css/foundation.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.5/css/foundation-float.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
+</head>
+<body>
+    <div class="content">
+        <p>
+            <h1 class="con">(✿ꈍ‿ꈍ)☆ Personal Information ☆(ꈍ‿ꈍ✿)</h1>
+        </p>
+    </div>
+
+   <div class="container">
+    <img class="profile" src="amGif.gif" alt="gifMe">
+   </div>
+   
+   <div class="information">
+    <p>
+        <h3>ʕ•́ᴥ•̀ʔっ Name : Wilairak Prathummat</h3>
+        <h3>ʕ•́ᴥ•̀ʔっ Nickname : Fah</h3>
+        <h3>ʕ•́ᴥ•̀ʔっ Birthday : 23 July 2002</h3>
+        <h3>ʕ•́ᴥ•̀ʔっ Age : 20 years old</h3>
+        <h3>ʕ•́ᴥ•̀ʔっ Study : Faculty of Informatics BUU, Bachelor of Science Program in Software Engineering</h3>
+        <h3>ʕ•́ᴥ•̀ʔっ E-mail : 64160072@go.buu.ac.th</h3>
+        <h3>ʕ•́ᴥ•̀ʔっ Tel. : 092-506-3305</h3>
+        <h3>ʕ•́ᴥ•̀ʔっ Hobby : cactus planting, watch anime, listen to music and  shopping</h3>
+        <h3>ʕ•́ᴥ•̀ʔっ Favorite anime : nichijou, k-On!, non non biyori and new game!</h3>    
+    </p>
+   </div>
+
+   <div class="row">
+        <div class="small-6 columns">
+            <div class="anime">
+                <img src="suck (1).gif" alt="ani1">
+            </div>
+        </div>
+        <div class="small-6 columns">
+            <div class="anime">
+                <img src="kOn.gif" alt="ani2" width="500px">
+            </div>
+        </div>
+        <div class="small-6 columns">
+            <div class="anime">
+                <img src="nonnon.gif" alt="ani3">
+            </div>
+        </div>
+        <div class="small-6 columns">
+            <div class="anime">
+                <img src="newGame.gif" alt="ani4">
+            </div>
+        </div>
+   </div>
+
+   <div class="thx">
+        <p>
+            <h1>♡✧( ु•⌄• ) thank you (❍❛‿❛❍❋)</h1>
+        </p>
+   </div>
+</body>
 </html>
