--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="content">
         <p>
-            <h1 class="con">(✿ꈍ‿ꈍ)☆ Personal Information ☆(ꈍ‿ꈍ✿)</h1>
+            <h2 class="con">(✿ꈍ‿ꈍ)☆ Personal Information ☆(ꈍ‿ꈍ✿)</h2>
         </p>
     </div>
 
@@ -27,15 +27,15 @@
    
    <div class="information">
     <p>
-        <h3>ʕ•́ᴥ•̀ʔっ Name : Wilairak Prathummat</h3>
-        <h3>ʕ•́ᴥ•̀ʔっ Nickname : Fah</h3>
-        <h3>ʕ•́ᴥ•̀ʔっ Birthday : 23 July 2002</h3>
-        <h3>ʕ•́ᴥ•̀ʔっ Age : 20 years old</h3>
-        <h3>ʕ•́ᴥ•̀ʔっ Study : Faculty of Informatics BUU, Bachelor of Science Program in Software Engineering</h3>
-        <h3>ʕ•́ᴥ•̀ʔっ E-mail : 64160072@go.buu.ac.th</h3>
-        <h3>ʕ•́ᴥ•̀ʔっ Tel. : 092-506-3305</h3>
-        <h3>ʕ•́ᴥ•̀ʔっ Hobby : cactus planting, watch anime, listen to music and  shopping</h3>
-        <h3>ʕ•́ᴥ•̀ʔっ Favorite anime : nichijou, k-On!, non non biyori and new game!</h3>    
+        <h4>ʕ•́ᴥ•̀ʔっ Name : Wilairak Prathummat</h4>
+        <h4>ʕ•́ᴥ•̀ʔっ Nickname : Fah</h4>
+        <h4>ʕ•́ᴥ•̀ʔっ Birthday : 23 July 2002</h4>
+        <h4>ʕ•́ᴥ•̀ʔっ Age : 20 years old</h4>
+        <h4>ʕ•́ᴥ•̀ʔっ Study : Faculty of Informatics BUU, B.Sc.  Software Engineering</h4>
+        <h4>ʕ•́ᴥ•̀ʔっ E-mail : 64160072@go.buu.ac.th</h4>
+        <h4>ʕ•́ᴥ•̀ʔっ Tel. : 092-506-3305</h4>
+        <h4>ʕ•́ᴥ•̀ʔっ Hobby : cactus planting, watch anime, listen to music and  shopping</h4>
+        <h4>ʕ•́ᴥ•̀ʔっ Favorite anime : nichijou, k-On!, non non biyori and new game!</h4>    
     </p>
    </div>
 
@@ -64,7 +64,7 @@
 
    <div class="thx">
         <p>
-            <h1>♡✧( ु•⌄• ) thank you (❍❛‿❛❍❋)</h1>
+            <h1>♡✧( ु•⌄• ) Thank you (❍❛‿❛❍❋)</h1>
         </p>
    </div>
 </body>
